Fix hide
I've putted an filter whenever the user decide to hide something.
It will make the ad invisible to normal users, but he can see it in
a grey blur.

--- a/public/stylesheets/helpers.css
+++ b/public/stylesheets/helpers.css
@@ -593,3 +593,11 @@ button.mdl-button--mini-fab:hover {
 .mdl-cell-mask {
 	margin: 0px;
 }
+
+.hide-cell .can-hide{
+  -webkit-filter: blur(10px) grayscale(100%);
+}
+
+.hide-cell .cant-hide{
+  -webkit-filter: none !important;
+}
