--- a/public/stylesheets/main-page.css
+++ b/public/stylesheets/main-page.css
@@ -116,6 +116,7 @@
 }
 .fab {
   top: 9%;
+  z-index: 1000000;
   position: absolute;
   -webkit-transform: translate(0px, -28px);
   transform: translate(0px, -28px);
